--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,10 @@
   padding: 0;
   margin: 0;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: all 0.3s;
+}
